--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve",
-    "build": "cross-env NODE_ENV=production webpack --watch"
+    "start": "cross-env NODE_ENV=development webpack serve",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "keywords": [],
   "author": "Ruslans Krims",
